# artesania

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  models.rs
src-tauri/src/commands/: ai_config.rs  business.rs  carts.rs  categories.rs  logs.rs  masterstocks.rs  menu.rs  mod.rs  orders.rs  planner.rs  products.rs  security.rs  sms.rs  tables.rs  terminal.rs
src-tauri/src/providers/: infobip.rs  mod.rs  sms_gateway.rs
src/modules/auditguard/: AuditGuard.tsx
src/modules/categories/: Categories.tsx
src/modules/masterstocks/: MasterStocks.tsx
src/modules/menugpt/: MenuGPT.tsx
src/modules/orders/: Orders.tsx
src/modules/planner/: Planner.tsx  index.ts
src/modules/pos/: POS.tsx  index.ts
src/modules/products/: Products.tsx
src/modules/reports/: Reports.tsx
src/modules/settings/: Settings.tsx
src/modules/smsticket/: SMSTicket.tsx  index.ts
src/modules/tables/: Tables.tsx
src/pages/: Dashboard.tsx
src/shared/components/: SMSTicketWidget.tsx  index.ts
src/shared/contexts/: AppContext.tsx  ErrorContext.tsx  TabStateManager.tsx  UserSettingsContext.tsx
src/shared/hooks/: useBusinessSettings.ts  useDoubleClick.ts  useTabState.ts  useTaxSettings.ts
src/shared/services/: aiConfigService.ts  logsService.ts  (+6 more)
(+115 files in other folders)
